kimpanel: add a ibus panel launcher.

Launcher will wait for ibus start and launch the panel then quit.
Launcher is started by dataengine. Also this change make kimpanel's
panel quit when dataengine disappears (applet removable will trigger
it). DBus magic will actually be able to fallback it to the running gtk3
panel.

BUG: 378342
FIXED-IN: 5.10